# morning-report

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: morning-report.yml
config/: projects.example.json
src/morning_report/: __init__.py  cli.py
tests/: test_cli.py
