[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-report"
version = "0.1.0"
description = "Generate Chinese morning project reports and send them to Discord."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucien Auregin" }]

[project.optional-dependencies]
tts = ["edge-tts>=6.1.19"]

[project.scripts]
morning-report = "morning_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

